; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-hotkey.c_find_id_helper.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-hotkey.c_find_id_helper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.obs_hotkey_internal_find_forward = type { i64, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, %struct.TYPE_3__*)* @find_id_helper to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_id_helper(i8* %0, i64 %1, %struct.TYPE_3__* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca %struct.obs_hotkey_internal_find_forward*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %7, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to %struct.obs_hotkey_internal_find_forward*
  store %struct.obs_hotkey_internal_find_forward* %10, %struct.obs_hotkey_internal_find_forward** %8, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load %struct.obs_hotkey_internal_find_forward*, %struct.obs_hotkey_internal_find_forward** %8, align 8
  %15 = getelementptr inbounds %struct.obs_hotkey_internal_find_forward, %struct.obs_hotkey_internal_find_forward* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %13, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %25

19:                                               ; preds = %3
  %20 = load i64, i64* %6, align 8
  %21 = load %struct.obs_hotkey_internal_find_forward*, %struct.obs_hotkey_internal_find_forward** %8, align 8
  %22 = getelementptr inbounds %struct.obs_hotkey_internal_find_forward, %struct.obs_hotkey_internal_find_forward* %21, i32 0, i32 1
  store i64 %20, i64* %22, align 8
  %23 = load %struct.obs_hotkey_internal_find_forward*, %struct.obs_hotkey_internal_find_forward** %8, align 8
  %24 = getelementptr inbounds %struct.obs_hotkey_internal_find_forward, %struct.obs_hotkey_internal_find_forward* %23, i32 0, i32 2
  store i32 1, i32* %24, align 8
  store i32 0, i32* %4, align 4
  br label %25

25:                                               ; preds = %19, %18
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
